# danmaku-anywhere

./: .claude-task.md  .cursorignore  .eslintrc.cjs  .gitattributes  .gitignore  .mcp.json  .npmrc  .prettierignore  3547e890e9794c3a9698-0.10.3.xpi  CLAUDE.md  LICENSE  OPTIONS_REDESIGN.md  PROVIDER_REFACTORING_COMPLETE.md  PROVIDER_REFACTORING_STATUS.md  PROVIDER_REFACTORING_SUMMARY.md  README.en.md  README.md  biome.base.json  biome.json  cursor.json  index.html  knip.config.ts  lefthook.yml  package-lock.json  package.json  plex-danmaku.user.js  pnpm-lock.yaml  pnpm-workspace.yaml  pr413.json  skills-lock.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.claude/commands/: da-cleanup.md  da-dev.md
.claude/skills/: da-dev.md  dan-any
.cursor/: worktrees.json
.cursor/rules/: README.md  angular-standards.mdc  backend-standards.mdc  extension-standards.mdc  project-overview.mdc  react-standards.mdc  typescript-standards.mdc  update-docs-after-changes.mdc  web-scraping-standards.mdc
.devcontainer/: .gitignore  devcontainer.json  setup.sh
.github/ISSUE_TEMPLATE/: bug-report.md  bug-报告.md  bug.yaml  功能请求.md
.github/workflows/: ai-rereview.yml  build-extension.yml  i18n-check.yml  pr-quality.yml  (+7 more)
.junie/: guidelines.md
.run/: build chrome.run.xml  build firefox.run.xml  extension dev chrome.run.xml  extension dev firefox.run.xml
.specs/: DA-491-e2e-infra.md
app/: biome.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/release-manager/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/release-manager/src-tauri/capabilities/: main.json
app/release-manager/src-tauri/core/: Cargo.toml
app/release-manager/src-tauri/core/src/: active.rs  cache.rs  error.rs  github.rs  lib.rs  manager.rs  store.rs  types.rs
app/release-manager/src-tauri/core/tests/: e2e_flow.rs
app/release-manager/src-tauri/icons/: icon.icns
app/release-manager/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  wrangler.json
patches/: @crxjs__vite-plugin@2.0.0-beta.23.patch  @mui__system.patch  @mui__system@6.3.0.patch  @tanstack__angular-virtual.patch  danmaku@2.0.6.patch
scripts/: ai-rereview.cjs  da-bootstrap.mjs  e2e-comment.cjs  i18n-check-comment.cjs  pr-status.sh  pr-title-check.cjs  preview-build-check.cjs  preview-build-comment.cjs  sync-changelog.ts  update-nightly-tag.cjs
(+553 files in other folders)
