[workspace]
members = ["core"]
resolver = "2"

[package]
name = "release-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "release_manager_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "release-manager"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
release-manager-core = { path = "core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
tauri-build = { version = "2" }
